Remove unused extensions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,6 @@
   "search.exclude": {
     ".git": true
   },
-  "workbench.colorTheme": "🌚 DarkCode++",
+  "workbench.colorTheme": "Monokai Night",
   "workbench.iconTheme": "material-icon-theme"
 }
