--- a/pylintrc.cfg
+++ b/pylintrc.cfg
@@ -63,7 +63,7 @@ function-naming-style = snake_case
 # function-rgx =
 
 # Good variable names which should always be accepted, separated by a comma.
-good-names = [i, j, k, ex, Run, _]
+good-names = [_,i, j, k]
 # good-names-rgxs =
 
 include-naming-hint = true
