--- a/pylintrc.cfg
+++ b/pylintrc.cfg
@@ -10,7 +10,7 @@ fail-under = 10
 ignore = [CVS,.venv]
 
 # Add files or directories regex patterns to ignore list
-ignore-paths = ["**\\.venv\\**"]
+# ignore-paths = ["**\\.venv\\**"]
 
 # Files or directories matching the regular expression patterns are skipped. The
 # regex matches against base names, not paths.
